--- a/index.html
+++ b/index.html
@@ -60,19 +60,23 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>		
+		<div class="main_container" id="id_main_container">
+      			<div class="container_inner" id="display_div_id">
+      			</div>
+   		</div>
 		<script>
-	var counter_list = [10,10000,10000];
-	var str_counter_0 = counter_list[0];
-	var str_counter_1 = counter_list[1];
-	var str_counter_2 = counter_list[2];
-	var display_str = "";
-	var display_div = document.getElementById("display_div_id");
+		var counter_list = [10,10000,10000];
+		var str_counter_0 = counter_list[0];
+		var str_counter_1 = counter_list[1];
+		var str_counter_2 = counter_list[2];
+		var display_str = "";
+		var display_div = document.getElementById("display_div_id");
 
-	function incrementCount(current_count){
+		function incrementCount(current_count){
 		setInterval(function(){
 		// clear count
 		while (display_div.hasChildNodes()) {
-          display_div.removeChild(display_div.lastChild);
+         	 display_div.removeChild(display_div.lastChild);
 		}
 		str_counter_0++;
 		if (str_counter_0 > 99) {
@@ -90,7 +94,7 @@
 			display_div.appendChild(new_span);
       		}
 		},1000);
-	}
+		}
 	</script>
 	</body>
 	<footer class="progress"  color="#16f626" style="text-align: center;">
