--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -8,7 +8,7 @@
 		font-family: Arial;
 		color: #16f626;
 		}
-		ul {
+				ul {
 		margin: 30px;
 		padding: 40px;
 		list-style: none;
@@ -26,17 +26,13 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-		a:visited {
-       		color:#09FF1A;
+		a:visited{
+        	color:#09FF1A;
         	}
 		.none {cursor: none;}
 		.not-allowed {cursor: not-allowed;}
 		.progress {cursor: progress;}
 	</style>
-	</head>
-	<body>
-	<h1 class="none" style="text-align: center;">Cy6or9's </h1>
-	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
@@ -45,6 +41,10 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
+		<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+	</head>
+	<body>
+	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
