--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -46,7 +46,8 @@
 	<body>
 	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
-	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
+	<h1 class="none" style="text-align: center;">SPOONFEEDS</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
     <img class="none" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
     <p style="background-color:black; opacity:.7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
