--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 	<body>
 	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
-	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
+	<h1 class="none" style="text-align: center;">HOME</h1>
 		<p class="none" style="background-color:black; opacity:.7;">-Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
 		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
 		Here you'll find news and some of my own twists to some major exploits, amongst other things. Feel free to bookmark
