--- a/links.html
+++ b/links.html
@@ -47,7 +47,7 @@
 	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
-	<h1 class="none" style="text-align: center;">LINKS/REFERENCES</h1>
+	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">LINKS/REFERENCES</h1>
 		<p style="background-color: black; opacity: .7; text-align: center;">Virus-free Coronavirus Map live link</p>
 		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
 		<p style="background-color: black; opacity: .7; text-align: center;">Check My Torrent IP Tool Download link</p>
