--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@
 	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
-	<h1 class="none" style="background-color: black; opacity: .7; text-align: center;">NEWS</h1>
+	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">NEWS</h1>
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
     <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
