--- a/news.html
+++ b/news.html
@@ -62,6 +62,7 @@ attackers end, he can see everything you don't want them too including credit ca
 Although the original Coronavirus map is safe and runnig virus free, beware of the fakes created in 
 these trying times to take advantage of us. The original and virus free coronavirus map can be found at 
 the following link. Be weary of others.</p>
+		<center><p> Posted: 3/13/20 </p></center>
 <a style="background-color: black; opacity: .7; text-align: center;" href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases</a>
 <h2 style="background-color: black; opacity: .7; text-align: center;">Around Half of the COVID-19 Victims Have Recovered</h2>
 <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
@@ -78,6 +79,7 @@ the following link. Be weary of others.</p>
     that you come into contact with. The CDC works 24/7 to protect your health, so know that anymore travel bans 
     issued now or in the near future are solely for your safety and I urge you to abide by them to prevent further 
     spreading of this pandemic.</p>
+		<center><p> Posted: 3/12/20 </p></center> 
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
