--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -50,10 +50,16 @@
 	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">SPOONFEEDS</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
     <img class="none" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
-    <p style="background-color:black; opacity:.7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
+    <p style="background-color: black; opacity: .7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
 	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
-	<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
+		<h3> - To Install </h3>
+		<p style="background-color: black; text-align: left;">cd /Simplefite/</p>
+		<p style="background-color: black; text-align: left;">sudo chmod +x simplefite</p>
+		<h3> - To run </h3>
+		<p style="background-color: black; opacity: .7; text-align: center;"> from the Simplefite directory</p>
+		<p style="background-color: black; text-align: left;">./simplefite</p>
+		<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
     <h2 style="background-color:black; opacity:.7; text-align: center;"> UUO</h2>
 	<img class="none" src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
 	<p style="background-color:black; opacity:.7; text-align: center;">UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
