--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -57,7 +57,7 @@
 		<p style="background-color: black; text-align: left;">cd /Simplefite/</p>
 		<p style="background-color: black; text-align: left;">sudo chmod +x simplefite</p>
 		<h3> - To run </h3>
-		<p style="background-color: black; opacity: .7; text-align: center;"> from the Simplefite directory</p>
+		<p style="background-color: black; opacity: .7; text-align: left;"> from the Simplefite directory</p>
 		<p style="background-color: black; text-align: left;">./simplefite</p>
 		<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
     <h2 style="background-color:black; opacity:.7; text-align: center;"> UUO</h2>
