--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -92,7 +92,7 @@
 		</nav>
 	</body>
 	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
-	 <a href='https://www.symptoma.com/en/info/covid-19'>COVID-19</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c25d7923c0a9ff6347f6e082c30040893da5b213'></script>
+	 <a href='https://www.symptoma.com/en/info/covid-19'>count</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c25d7923c0a9ff6347f6e082c30040893da5b213'></script>
 		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/649264/t/9"></script>
 	</footer>
 </html>
