--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>:b</title>
+		<left><img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/green-skull.png" alt="greenskull" height="60" width="100" > </left>
 	<style>
 		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
 		background-color: #2b2b2b;
