--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 		.not-allowed {cursor: not-allowed;}
 		.progress {cursor: progress;}
 	</style>
-		<nav> <left><img style="background-color: black; opacity: .7;" class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/green-skull.png" alt="greenskull" height="60" width="55" > </left>
+		<nav>
 			<ul>
+				<img style="background-color: black; opacity: .7; float: left;" class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/green-skull.png" alt="greenskull" height="40" width="32" >
                 <li><a href="index.html">Home</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
