--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<p style="text-align: center;"> Posted: 3/01/20 </p>
 		<nav>
 			<ul>
+				<img style="background-color: black; opacity: .7; float: left;" class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/green-skull.png" alt="greenskull" height="40" width="32" >
                 <li><a href="index.html">Home</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
