added images folder

--- a/links.html
+++ b/links.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>:b</title>
+		<title>:b Links</title>
 	<style>
-		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
+		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/matrix-code.gif);
 		background-color: #2b2b2b;
-		font-family: Arial;
+		font-family: Times New Roman;
 		color: #16f626;
 		}
 				ul {
@@ -35,16 +35,18 @@
 	</style>
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-		<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+			<h3 class="none" style="text-align: center;">Cy6or9's </h3>
+		<center><img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/skull-matrix.jpg" alt="greenskullmatrix" height="220" width="320" > </center>
 	</head>
 	<body>
-	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
+	<h4 class="none" style="text-align: left;"></h4>
+	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
 	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">LINKS/REFERENCES</h1>
@@ -58,7 +60,7 @@
 		<a href="https://github.com/cy6or9">https://github.com/cy6or9</a>
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
