--- a/news.html
+++ b/news.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>:b</title>
+		<title>:b News</title>
 	<style>
-		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
+		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/matrix-code.gif);
 		background-color: #2b2b2b;
-		font-family: Arial;
+		font-family: Times New Roman;
 		color: #16f626;
 		}
 				ul {
@@ -35,21 +35,21 @@
 	</style>
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-		<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+			<h3 class="none" style="text-align: center;">Cy6or9's </h3>
+		<center><img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/skull-matrix.jpg" alt="greenskullmatrix" height="220" width="320" > </center>
 	</head>
 	<body>
-	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
 	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">NEWS</h1>
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
-    <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
+    <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/coranavirusmap.png" height="260" width="400" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
     It's been more than a week since Reason Cybersecurity warned of a "sophisticated attack method 
 taking advantage of the trusted World Health Organization". The attack installs a keylogger onto the
@@ -65,7 +65,7 @@ the following link. Be weary of others.</p>
 <a style="background-color: black; opacity: .7; text-align: center;" href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases</a>
 		<center><p> Posted: 3/13/20 </p></center>
 <h2 style="background-color: black; opacity: .7; text-align: center;">Around Half of the COVID-19 Victims Have Recovered</h2>
-<center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
+<center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/Get-Well-Soon.jpg" alt="getwellsoon" height="260" width="400" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Although the once thought crippling disease is still on the rise, it's good to know that more people
     are recovering everyday. The disease has been reported in 116 countries, confirmed cases are 128,392 , death 
     count is above 4,728 and the amount recovered is 69,607 and all are still climbing. According to the CDC 
@@ -82,7 +82,7 @@ the following link. Be weary of others.</p>
 		<center><p> Posted: 3/12/20 </p></center> 
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
