--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>:b</title>
+		<title>:b Spoonings</title>
 	<style>
-		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
+		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/matrix-code.gif);
 		background-color: #2b2b2b;
-		font-family: Arial;
+		font-family: Times New Roman;
 		color: #16f626;
 		}
 				ul {
@@ -35,21 +35,21 @@
 	</style>
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-		<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+			<h3 class="none" style="text-align: center;">Cy6or9's </h3>
+		<center><img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/skull-matrix.jpg" alt="greenskullmatrix" height="220" width="320" > </center>
 	</head>
 	<body>
-	<h3 class="none" style="text-align: center;">Cy6or9's </h3>
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
 	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">SPOONFEEDS</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
-    <img class="none" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
+    <img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/simplefite-menu.png" alt="description" height="300" width="400" />
     <p style="background-color: black; opacity: .7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
 	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
@@ -61,7 +61,7 @@
 		<p style="background-color: black; text-align: left;">./simplefite</p>
 		<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
     <h2 style="background-color:black; opacity:.7; text-align: center;"> UUO</h2>
-	<img class="none" src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
+	<img class="none" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/uuo-main.png" alt="uuo-menu" height="300" width="400" />
 	<p style="background-color:black; opacity:.7; text-align: center;">UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
 	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
 	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
@@ -84,7 +84,7 @@
 	warning on your device.</p>
 		<nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
