--- a/news.html
+++ b/news.html
@@ -48,6 +48,20 @@
 	<h4 class="none" style="text-align: left;"></h4>
 	<h2 class="none" style="text-align: center;">Cyber Blog's</h2>
 	<h1 class="none" style="background-color: black; opacity: .7; text-decoration: underline; text-align: center;">NEWS</h1>
+		<h2 style="background-color: black; opacity: .7; text-align: center;">C/2019 Y4 (Atlas)</h2>
+	<center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/orbit-viewer-snapshot(1).jpg" height="260" width="400" > </center>
+	<p style="background-color: black; opacity: .7; text-align: center;" >2 things identified in December 2019 were the COVID-19 virus and an inbound comet named C/2019 Y4 (ATLAS). 
+	Some are saying this global shutdown is an attempt to keep us indoors, afraid and distracted while this comet
+	approaches our solar system. Though astronomers predict it will be closer to Mercury and will likely lose a 
+	significant amount of it's mass while it makes it's pass with the sun, but what I find strange is they're not 
+	predicting a specific size (AT ALL). Conspiracy theorist are on the record saying "five times the size of Jupiter" or 
+	"half the size of the Sun", but I don't see a credible source making these claims. Looking at models, one showed 
+	a dangerously close approach to earth and another showed ATLAS passing by mercury like experts claim (this one i 
+	witnessed on a NASA site). I for sure can recall earlier this week, that they sent troops in to open the all too 
+	famous doomsday bunkers meant to house the political figures and everyone else important enough to keep around for 
+	our new dawn after an apocalyptic scenario. And all this during a pandemic is all too coincidental.
+	We'll be able to see it with the naked eye towards the end of this month, but it's visible with a telescope now and has a 
+	green aurora with a pitch black tail in the Northern hemisphere. NASA models show it closest too Earth on 5/23/2020 at a safe distance.</p>	
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
     <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/coranavirusmap.png" height="260" width="400" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
