--- a/news.html
+++ b/news.html
@@ -62,6 +62,7 @@
 	our new dawn after an apocalyptic scenario. And all this during a pandemic is all too coincidental.
 	We'll be able to see it with the naked eye towards the end of this month, but it's visible with a telescope now and has a 
 	green aurora with a pitch black tail in the Northern hemisphere. NASA models show it closest too Earth on 5/23/2020 at a safe distance.</p>	
+	<center><p> Posted: 4/06/20 </p></center>
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
     <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/coranavirusmap.png" height="260" width="400" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
