--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		<p class="none" style="background-color:black; opacity:.7;">-Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
 		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
 		Here you'll find news and some of my own twists to some major exploits, amongst other things. Feel free to bookmark
-		this page to stay tuned to my cyber adventures. Enjoy!- </p>
+		this page to stay tuned to my cyber adventures.
+			Go to Spoonfeeds for programs and walkthroughs on installations Enjoy!- </p>
 		<p style="text-align: center;"> Posted: 3/01/20 </p>
 		<nav>
 			<ul>
