--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<nav>
 			<ul>
                 <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
-				<li><a href="maps.html">Links</a></li>
+				<li><a href="maps.html">Maps</a></li>
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
 			</ul>
