--- a/maps.html
+++ b/maps.html
@@ -41,3 +41,57 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
+	</head>
+	<body>
+		<nav>
+			<ul>
+                <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
+				<li><a href="maps.html">Maps</a></li>
+				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
+				<li><a href="links.html">Links</a></li>
+			</ul>
+		</nav>		
+		    <div class="main_container" id="id_main_container">
+				<div class="container_inner" id="display_div_id">
+				</div>
+			</div>
+	<script>
+	var counter_list = [10,10000,10000];
+	var str_counter_0 = counter_list[0];
+	var str_counter_1 = counter_list[1];
+	var str_counter_2 = counter_list[2];
+	var display_str = "";
+	var display_div = document.getElementById("display_div_id");
+
+	function incrementCount(current_count){
+		setInterval(function(){
+		// clear count
+		while (display_div.hasChildNodes()) {
+          display_div.removeChild(display_div.lastChild);
+		}
+		str_counter_0++;
+		if (str_counter_0 > 99) {
+			str_counter_0 = 10; // reset count
+			str_counter_1++;    // increase next count
+		}
+		if(str_counter_1>99999){
+			str_counter_2++;
+		}
+		display_str = str_counter_2.toString() + str_counter_1.toString() + str_counter_0.toString();
+		for (var i = 0; i < display_str.length; i++) {
+			var new_span = document.createElement('span');
+			new_span.className = 'num_tiles';
+			new_span.innerText = display_str[i];
+			display_div.appendChild(new_span);
+      }
+		},1000);
+	}
+	</script>
+	</body>
+	<footer class="progress"  color="#16f626" style="text-align: center;">
+		I make websites for $. contact me at cy6or9@yahoo.com if interested.
+	 <a href='https://www.symptoma.com/en/info/covid-19'>count</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c25d7923c0a9ff6347f6e082c30040893da5b213'></script>
+		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/649264/t/9"></script>
+	</footer>
+	</html>
+	
