--- a/maps.html
+++ b/maps.html
@@ -50,8 +50,9 @@
 				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
 				<li><a href="links.html">Links</a></li>
 			</ul>
-		</nav>		
-		    <div class="main_container" id="id_main_container">
+		</nav>
+		<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d165512.16561582766!2d-88.13024603236319!3d36.71529038186799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x887afa602862ab65%3A0x330108019c1dcfe2!2sLand%20Between%20the%20Lakes%20National%20Recreation%20Area!5e1!3m2!1sen!2sch!4v1608870100000!5m2!1sen!2sch" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
+			<div class="main_container" id="id_main_container">
 				<div class="container_inner" id="display_div_id">
 				</div>
 			</div>
