--- a/maps.html
+++ b/maps.html
@@ -43,7 +43,7 @@
 		</nav>
 	</head>
 	<body>
-		<center><iframe src="https://www.google.com/maps/d/embed?mid=1ZVqu-eWCXMZgCTGs7SiIHDiSmET9GgeD" width="640" height="480"></iframe></center>
+		<center><style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><small><a href="//www.arcgis.com/apps/Embed/index.html?webmap=af04f6c73987486e949ebbe5f36885d0&extent=-88.0434,37.6726,-87.3485,37.9498&zoom=true&scale=true&details=true&legendlayers=true&active_panel=legend&basemap_gallery=true&disable_scroll=true&theme=dark" style="color:#0000FF;text-align:left" target="_blank">View larger map</a></small><br><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Kentucky Department of Fish and Wildlife Resources Public Hunting Area Overview" src="//www.arcgis.com/apps/Embed/index.html?webmap=af04f6c73987486e949ebbe5f36885d0&extent=-88.0434,37.6726,-87.3485,37.9498&zoom=true&previewImage=false&scale=true&details=true&legendlayers=true&active_panel=legend&basemap_gallery=true&disable_scroll=true&theme=dark"></iframe></div></center>
 		<nav>
 			<ul>
                 <li><a href="index.html"><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/images/green-skull.png" alt="Home" height="35" width="35"></a></li>
