--- a/BlackstonandSons/index.html
+++ b/BlackstonandSons/index.html
@@ -21,5 +21,6 @@
             <a class="cta" href="#"><button>Free Estimates</button></a>
         </header>
       <h1>Blackston & Sons Construction</h1>
+      <p>-Lifetime WARRANTIES on roofs </p>
       <p></p>
     </body>
