--- a/BlackstonandSons/gal.html
+++ b/BlackstonandSons/gal.html
@@ -21,7 +21,7 @@
             <a class="cta" href="#"><button>Free Estimate</button></a>
         </header>
 
-        <input type="radio" name="Photos" id="check1">
+        <input type="radio" name="Photos" id="check1" checked>
         <input type="radio" name="Photos" id="check2">
         <input type="radio" name="Photos" id="check3">
         <input type="radio" name="Photos" id="check4">
