--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     <script>
         // Firebase Config
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyAUU-nZOb6jP1KgDAodB3c_PK7VLmFFdcc",
+            authDomain: "tradetrends-89a9d.firebaseapp.com",
+            projectId: "tradetrends-89a9d",
+            storageBucket: "tradetrends-89a9d.firebasestorage.app",
+            messagingSenderId: "990950180616",
+            appId: "1:990950180616:web:ddadabd319d9c188a78ebd"
         };
 
         // Initialize Firebase
@@ -109,7 +109,7 @@
         const db = firebase.firestore(app);
 
         // Finnhub API Key and Base URL
-        const FINNHUB_API_KEY = 'YOUR_FINNHUB_API_KEY';
+        const FINNHUB_API_KEY = 'cuvuc2hr01qub8tvmkrgcuvuc2hr01qub8tvmks0';
         const FINNHUB_URL = 'https://finnhub.io/api/v1/quote';
 
         // Fetch stock data from Finnhub
